# project_barcelona_hack

./: .env.example  .gitignore  BrainReach_Pitch.pptx  README.md
assets/: mesh_meta.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  model.py  scoring.py
context-docs/: 01 - Hackathon Theme.md  02 - PRD Brian Visualisation.md  03 - Status.md  04 - Context.md  05 - My Project.md  07 - Pitch.md
docs/: agent-infrastructure.md  architecture.md  tech-stack.md
docs/superpowers/plans/: 2026-04-16-ui-polish.md
docs/superpowers/specs/: 2026-04-16-ui-polish-design.md
frontend/: .cta.json  package-lock.json  package.json
frontend/convex/: actions.ts  agent.ts  campaigns.ts  chat.ts  schema.ts  variants.ts
frontend/src/: styles.css
frontend/src/components/: Brain.tsx  BrainLegend.tsx  BranchTree.tsx  ChatPanel.tsx  Footer.tsx  Header.tsx  HorizontalTree.tsx  LeadCard.tsx  LeadList.tsx  LeadTabs.tsx  LessonsDrawer.tsx  LessonsPane.tsx  ScoreBars.tsx  Timeline.tsx  WordStream.tsx
frontend/src/components/ui/: flow-field-background.tsx
frontend/src/lib/: activations.ts  colormap.ts  convex.ts  persona.ts  scoring.ts
frontend/src/routes/: __root.tsx  campaign.$id.tsx  index.tsx  pitch.tsx  session.$id.tsx
gpu/: server.py  start.sh
scripts/: export_mesh.py
