[project]
name = "neuralreach-inference"
version = "0.1.0"
description = "TRIBE v2 inference service for NeuralReach brain-activation visualizer"
requires-python = ">=3.10,<3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.12",
  "numpy>=1.26",
  "torch>=2.3",
  "nilearn>=0.10.4",
  "trimesh>=4.4",
  "pydantic>=2.8",
  "httpx>=0.27",
  "tribev2 @ git+https://github.com/facebookresearch/tribev2.git",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.6",
]
